--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Репетиторские услуги | Подготовка к ЕГЭ</title>
+    <title>Репетиторские услуги</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,10 +21,14 @@
     </style>
 </head>
 <body>
-    <h1>📚 Репетиторские услуги подготовка к занятиям "11-44"</h1>
+    <h1>📚 Репетиторские услуги подготовка к занятиям по :
+            математике;
+            русскому языку;
+            информатике;
+            обществознанию.    </h1>
     
-    <h2>О нас</h2>
-    <p>Мы проводим онлайн-занятия по русскому языку и математике для школьников 5-11 классов. Занятия проходят в группах через Zoom с опытными преподавателями.</p>
+    <h2>О обо мне</h2>
+    <p>Я провожу онлайн-занятия по разным дисциплинам для школьников с 1 по 11 классы. Занятия проходят в группах через такие платформы как PruffMe и ZooM с опытными преподавателями.</p>
     
     <h2>Мои услуги</h2>
     <ul>
@@ -44,11 +48,11 @@
     <div class="price-list">
         <p><strong>Русский язык:</strong></p>
         <ul>
-            <li>5-6 класс: 2500₽ в месяц</li>
-            <li>7 класс: 2500₽ в месяц</li>
-            <li>8 класс: 2800₽ в месяц</li>
-            <li>9 класс: 2800₽ в месяц</li>
-            <li>11 класс: 3000₽ в месяц</li>
+            <li>5-6 класс: 2 500 р в месяц</li>
+            <li>7 класс: 2 500 р в месяц</li>
+            <li>8 класс: 2 800 р в месяц</li>
+            <li>9 класс: 2 800 р в месяц</li>
+            <li>11 класс: 3 000 р в месяц</li>
         </ul>
         <p><em>В стоимость входит: регулярные онлайн-занятия, методические материалы, проверка домашних заданий.</em></p>
     </div>
