--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
     </style>
 </head>
 <body>
-    <h1>📚 Репетиторские услуги подготовка к занятиям по :
-            математике;
-            русскому языку;
-            информатике;
-            обществознанию.    </h1>
+    <h1>📚 Репетиторские услуги.
+            Подготовка к занятиям по: математике, русскому, информатике, обществознанию.    </h1>
     
     <h2>О обо мне</h2>
     <p>Я провожу онлайн-занятия по разным дисциплинам для школьников с 1 по 11 классы. Занятия проходят в группах через такие платформы как PruffMe и ZooM с опытными преподавателями.</p>
