--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:description" content="Профессиональная подготовка к экзаменам по математике, русскому языку и обществознанию">
     <meta property="og:type" content="website">
     <title>Репетиторские услуги - Подготовка к ЕГЭ и ОГЭ онлайн</title>
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
