--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         
         <nav>
             <ul>
-                <li><a href="#about">О преподавателе</a></li>
+                <li><a href="#about">Главная</a></li>
+                <li><a href="about.html">О преподавателе</a></li>
                 <li><a href="#services">Услуги</a></li>
                 <li><a href="#schedule">Расписание и цены</a></li>
                 <li><a href="#contact">Контакты</a></li>
