--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <ul>
                 <li><a href="#about">Главная</a></li>
                 <li><a href="about.html">О преподавателе</a></li>
+                <li><a href="portfolio.html">Портфолио</a></li>
                 <li><a href="#services">Услуги</a></li>
                 <li><a href="#schedule">Расписание и цены</a></li>
                 <li><a href="#contact">Контакты</a></li>
