--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <title>Репетиторские услуги - Подготовка к ЕГЭ и ОГЭ онлайн</title>
     <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=2.0">
     
     <!-- Яндекс.Метрика (Замените XXXXXXXXX на ваш номер счетчика) -->
     <!-- <script type="text/javascript" >
