--- a/index.html
+++ b/index.html
@@ -41,13 +41,11 @@
         <nav>
             <ul>
                 <li><a href="#about">Главная</a></li>
-                <li><a href="about.html">О преподавателе</a></li>
-                <li><a href="portfolio.html">Портфолио</a></li>
                 <li><a href="#services">Услуги</a></li>
+                <li><a href="#reviews">Отзывы</a></li>
                 <li><a href="#schedule">Расписание и цены</a></li>
                 <li><a href="#contact">Контакты</a></li>
                 <li><a href="#documents">Документы</a></li>
-                <li><a href="faq.html">FAQ</a></li>
             </ul>
         </nav>
         
